--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,19 @@
-.pan-zoom{
 
-}
-#pan-zoom {
+.pan-zoom {
     position: fixed;
     bottom: 0;
     left: 0;
     border: 2px solid #000;
  
     display: none;
-    height: 20%;
+    height: 15%;
     width: 15%;
      background-size: contain;
      background-repeat: no-repeat;
      background-color: #ddd;
 }
 
-#draggable {
+.draggable {
 	border: 3px solid red;
 	cursor: move;
 	background:rgba(0,0,0,0.2);
